<resources>
    <string name="app_name">My Application</string>
    <string name="rollDiceRules">To pass is to roll a 7 or 11 on the come out roll.
    \n\n This is a sentences.
    \n\n Nice.</string>
    <string name="playerName">Enter your Name</string>
    <string name="numberText">Roll Dice to Start</string>
    <string name="rulesTxt">Place the status board in the middle of the table.
    \n\nPlace all of the dice to the left of the status board in three piles based on the three different types of dice: ground floor, upper floor, penthouse. These piles are referred to as the construction yard.
    \n\nTake one dice of each type and place them to the right of the status board. This pile is known as the abandoned district.
    \n\nAll of the building tiles should be placed near the status board.
    \n\nThe player who has most recently been in a high-rise building will start the game.
    \n\nStarting with the first player and moving clockwise players will receive one die set to a specific ground floor to start the game. The first player will receive a high-rise/orange ground floor. The second player will receive a mid-rise/blue ground floor. The third player will get a low-rise/purple ground floor. The fourth player receives no die at the beginning of the game.</string>
    <string name="editPlayerName">type name here</string>
    <string name="updatePlayerName">update</string>

</resources>